fixed issue with horizontal view on iphone

--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,14 @@
 html {
   height: 100%;
+  padding: env(safe-area-inset); /* for iphone notch */
 }
 
 body {
+  position: absolute;
   min-height: 100%;
   width: 100%;
-  margin: 0;
-  position: absolute;
   top: 0;
-  background-color:#dce6da;
+  margin: 0;
   background-image: linear-gradient(#dce6da, #e39a9c);
   background-attachment: fixed;
   background-repeat: no-repeat;
